plugins/formal-verification/testData/diagnostics/no_contracts/control_flow/recursion.kt
// NEVER_VALIDATE

fun <!VIPER_TEXT!>recursive<!>(): Unit = recursive()